# lab_1

./: CMakeLists.txt  README.md  warnings.txt
main/: CMakeLists.txt  blink_led.h  digits.h  main.c  output_counter.h  shift_out_lsb.h
main/blink-led/: blink_led.c  blink_led.h
main/button/: button.c  button.h
main/digits/: digits.c  digits.h
main/display/: display.c  display.h
main/output-counter/: output_counter.c  output_counter.h
main/shift-out-lsb/: shift_out_lsb.c  shift_out_lsb.h
